[DomKey] Use VK->DomKey mapping for non-printable keys

The original DomCode+flags->DomKey mapping causes issue when the application
generates mismatched keyCode + scanCode, or missing scanCode entirely.
(e.g. keyboard-rewrite softwares that only modifies keyCode)

A better solution is to use VK+flags->DomKey mapping (for both printable
and non-printable keys).

This CL is the first step for the non-printable keys, where a fixed table
for general non-printable keys was introduced. And there will be follow up CLs
to handle other language-specific cases and printable keys.

BUG=612749

Review-Url: https://codereview.chromium.org/2025733002
Cr-Commit-Position: refs/heads/master@{#397741}

Former-commit-id: fc639eb35da440358def45719ec8573117069e87